feat: Export PDF profesional y Widget para móviles
 Nuevas funcionalidades principales:

EXPORT PDF:
- Modal de exportación con opciones personalizables
- Portada profesional con gradiente
- Estadísticas generales (promedio, aprobadas, ECTS)
- Gráficos de distribución de notas
- Detalle completo por asignatura con progreso
- Recomendaciones IA incluidas
- Múltiples páginas con numeración automática
- Carga dinámica de jsPDF (solo cuando se usa)
- Diseño responsive y elegante

WIDGET MÓVIL:
- Archivo widget.html independiente
- Vista rápida de estadísticas sin abrir app
- Diseño con gradiente animado
- Actualización automática cada 60s
- Responsive para todos los tamaños
- Compatible con iOS/Android
- Acceso desde shortcuts PWA
- Emojis dinámicos según promedio

MEJORAS UI:
- Botón de exportar PDF en menú FAB
- Estilos para modal de exportación
- Animaciones suaves y profesionales
- Spinner de progreso al generar PDF

DOCUMENTACIÓN:
- README completo de nuevas funciones
- Guía de uso paso a paso
- Casos de uso y tips
- Solución de problemas

 Acceso widget: widget.html
 Docs: NUEVAS_FUNCIONES.md

--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,17 @@
         "sizes": "96x96",
         "type": "image/svg+xml"
       }]
+    },
+    {
+      "name": "Widget Información",
+      "short_name": "Widget",
+      "description": "Vista rápida de tus estadísticas",
+      "url": "/studyboard/widget.html",
+      "icons": [{ 
+        "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='96' height='96'%3E%3Crect width='96' height='96' rx='20' fill='%236366f1'/%3E%3Ctext x='48' y='65' font-size='50' text-anchor='middle'%3E📊%3C/text%3E%3C/svg%3E", 
+        "sizes": "96x96",
+        "type": "image/svg+xml"
+      }]
     }
   ]
 }
